# ai-coding-agent

./: .gitignore  dev_runner.py  final_output.txt  manager.py  project_session.py  pyproject.toml  readme.md  workspace.py
llm/: errors.py  provider.py
micro_agent/: __init__.py  __main__.py  cli.py
schema/: task.py
tests/: test_dev_runner.py  test_manager.py  test_project_session.py  test_provider.py  test_workspace.py
